k8s/deploy/infra/devpi.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: devpi
  name: devpi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: devpi
  template:
    metadata:
      labels:
        run: devpi
    spec:
      containers:
      - image: lordgaav/devpi:latest
        name: devpi
        ports:
        - containerPort: 3141
        # Pod Volumes
        volumeMounts:
        - mountPath: /devpi
          name: devpi-volume
      # Host Volumes
      volumes:
      - name: devpi-volume
        hostPath:
          path: /vol/devpi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: devpi
  name: devpi
spec:
  ports:
  - name: http
    port: 3141
  selector:
    run: devpi
  type: NodePort
