k8s/deploy/infra/mattermost-aws-host.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mattermost-aws-host
  name: mattermost-aws-host
spec:
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector: {}
