k8s/deploy/infra/test.yml
apiVersion: v1
kind: Service
metadata:
    name: nginx
    namespace: default
spec:
    ports:
    -   port: 8080
        protocol: TCP
        targetPort: 8080
        name: http8080
    -   port: 80
        protocol: TCP
        targetPort: 80
        name: http
    -   port: 443
        protocol: TCP
        targetPort: 443
        name: https
    externalIPs:
      - '34.225.145.96'
    selector:
        app: nginx
