k8s/deploy/infra/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mattermost2
  annotations:
    https.port: "443"
spec:
  backend:
    serviceName: mattermost-aws-host
    servicePort: 80

-- need to add 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devpi
spec:
  backend:
    serviceName: devpi
    servicePort: 3141
