k8s/deploy/infra/ingress2.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zipkin
spec:
  backend:
    serviceName: zipkin
    servicePort: 80
